@@ -308,9 +308,9 @@ unsigned IsOPENSHMEM (unsigned EvType)
 /*
  * IsGASPI
  */
-#define GASPI_EVENTS 33
+#define GASPI_EVENTS 35
 static unsigned gaspi_events[] = {
-	GASPI_SIZE_EV, GASPI_RANK_EV,
+	GASPI_SIZE_EV, GASPI_RANK_EV,GASPI_NOTIFICATION_ID_EV, GASPI_QUEUE_ID_EV,
 	GASPI_INIT_EV, GASPI_CONNECT_EV, GASPI_DISCONNECT_EV, GASPI_GROUP_CREATE_EV,
 	GASPI_GROUP_ADD_EV, GASPI_GROUP_COMMIT_EV, GASPI_GROUP_DELETE_EV,
 	GASPI_SEGMENT_ALLOC_EV, GASPI_SEGMENT_REGISTER_EV, GASPI_SEGMENT_CREATE_EV,
